update idea