@@ -1,45 +1,59 @@
 -ea
 -server
+
 -Xms1024m
 -Xmx3072m
--Xss16m
--XX:MaxMetaspaceSize=2G
--XX:MetaspaceSize=1G
+-Xss64m
+-XX:PermSize=512m
+-XX:MaxPermSize=2048m
+-XX:MaxMetaspaceSize=3G
+-XX:MetaspaceSize=2G
 -XX:ConcGCThreads=8
 -XX:ParallelGCThreads=8
 -XX:NewRatio=1
--Djdk.module.illegalAccess.silent=true
--XX:+UseCompressedOops
--Dfile.encoding=UTF-8
--XX:CICompilerCount=2
--Xverify:none
--Djdk.http.auth.tunneling.disabledSchemes=""
--XX:+HeapDumpOnOutOfMemoryError
--XX:-OmitStackTraceInFastThrow
--Djdk.attach.allowAttachSelf=true
--Dkotlinx.coroutines.debug=off
+-XX:+UseParNewGC
+-XX:SoftRefLRUPolicyMSPerMB=50
+-XX:ReservedCodeCacheSize=512m
+-XX:+AlwaysPreTouch
+-XX:+UseG1GC
+-XX:+DoEscapeAnalysis
+-XX:+CMSPermGenSweepingEnabled
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+PrintGCDetails
 -XX:+PrintFlagsFinal
 -XX:+AggressiveOpts
--XX:LargePageSizeInBytes=256m
+-XX:LargePageSizeInBytes=512m
 -XX:+UseCodeCacheFlushing
 -XX:+DisableExplicitGC
+-XX:+UseSplitVerifier
 -XX:CompileThreshold=10000
--XX:+OptimizeStringConcat
--XX:+UnlockDiagnosticVMOptions
 -XX:+CMSClassUnloadingEnabled
 -XX:CMSInitiatingOccupancyFraction=60
 -XX:+CMSParallelRemarkEnabled
+-XX:+UseCompressedOops
+-XX:CICompilerCount=2
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:-OmitStackTraceInFastThrow
+-XX:+UnlockDiagnosticVMOptions
+-XX:+UnlockExperimentalVMOptions
+-XX:+UseAdaptiveGCBoundary
+-XX:+UseCompressedStrings
+-XX:+UseStringCache
+-XX:+OptimizeStringConcat
+-XX:+UseFastAccessorMethods
+
+-Djdk.module.illegalAccess.silent=true
+-Djdk.http.auth.tunneling.disabledSchemes=""
+-Djdk.attach.allowAttachSelf=true
+-Dfile.encoding=UTF-8
+-Xverify:none
+-Dkotlinx.coroutines.debug=off
+
 -Djava.net.preferIPv4Stack=true
 -Dsun.io.useCanonCaches=false
--XX:+UnlockExperimentalVMOptions
 -Dsun.io.useCanonPrefixCache=false
--XX:SoftRefLRUPolicyMSPerMB=50
--XX:ReservedCodeCacheSize=240m
--XX:+AlwaysPreTouch
--XX:+UseG1GC
--XX:+DoEscapeAnalysis
+
+
 
 -XX:ErrorFile=~/logs/java_error_in_idea_%p.log
 -XX:HeapDumpPath=~/logs/java_error_in_idea.hprof
